@@ -250,7 +250,8 @@
 				 (ptr) == &mons[PM_DUNGEON_FERN] || \
 				 (ptr) == &mons[PM_SWAMP_FERN])
 
-#define is_vegetation(ptr)	(is_fern(ptr))
+#define is_vegetation(ptr)	(is_fern(ptr) || \
+				 (ptr) == &mons[PM_DEVIL_S_SNARE])
 
 /* For vampires */
 #define has_blood(ptr)		(!vegetarian(ptr) && \
