@@ -3801,7 +3801,7 @@ struct permonst _mons2[] = {
 	CLR_BLACK),
 
 /*
- * ferns and their spores
+ * ferns, their spores, and other plants
  */
     MON("dungeon fern", S_FUNGUS,
 	LVL(12, 2, 10, 0, 0), (G_NOHELL|G_NOSHEOL|G_GENO|G_NOCORPSE|1),
@@ -3895,6 +3895,14 @@ struct permonst _mons2[] = {
 	M1_FLY|M1_BREATHLESS|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS,
 	M2_HOSTILE|M2_NEUTER|M2_NOPOLY, 0, CLR_BROWN),
 
+    MON("Devil's Snare", S_XORN,
+	LVL(14, 10, 3, 0, -2), (G_NOSHEOL|G_GENO|G_NOCORPSE),
+	A(ATTK(AT_HUGS, AD_WRAP, 4, 6), NO_ATTK,
+	  NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
+	SIZ(40, 200, 0, MS_SILENT, MZ_LARGE), MR_POISON|MR_COLD, 0,
+	M1_BREATHLESS|M1_NOEYES|M1_NOLIMBS|M1_NOHEAD|M1_MINDLESS|M1_NOTAKE,
+	M2_HOSTILE|M2_NEUTER|M2_NOPOLY, M3_STATIONARY, CLR_GREEN),
+
 /*
  * Moria uniques
  */
@@ -3914,6 +3922,7 @@ struct permonst _mons2[] = {
 	SIZ(2000, 1000, 0, MS_SILENT, MZ_HUGE), MR_POISON|MR_SLEEP, MR_SLEEP,
 	M1_SWIM|M1_AMPHIBIOUS|M1_ANIMAL|M1_NOHANDS|M1_CARNIVORE,
 	M2_NOPOLY|M2_HOSTILE|M2_STRONG, M3_INFRAVISIBLE|M3_INFRAVISION, HI_LORD),
+
 /*
  * array terminator
  */
