@@ -102,6 +102,7 @@
 	  - arctic ferns, sprouts, and spores
 	  - blazing ferns, sprouts, and spores
 	  - swamp ferns, sprouts, and spores
+	  - Devil's Snare
 
 	* dungeon layout:
 	  - length of Town branch reduced and special filler level added
